@@ -3,6 +3,7 @@
 
 * Added the capability to terminate a service runner process by converting from a threading.Thread to a multiprocessing.Process
 * Cleaned up duplicate code fragments
+* Added CLI commands cons3rt project run off, on, snapshot, and restore to manage runs at the project level
 
 0.0.14
 ======
